--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ body {
 
 .labor-item {
     color: #fff;
-    font-size: 32px;
+    font-size: 26x;
     letter-spacing: 4px;
     line-height: 2;
     text-shadow: 0 0 10px rgba(0, 0, 0, .8);
