--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ body {
     font-size: 2em;
     margin-bottom: 16px;
     color: #001E6C;
-    background: url(../img/border-heading.jpg) top center / cover no-repeat;
+    background: url(../img/border-heading.jpg) top center / contain no-repeat;
     display: inline-block;
     padding: 26px 8px;
 }
@@ -150,7 +150,7 @@ body {
     font-size: 2em;
     margin-bottom: 16px;
     color: #001E6C;
-    background: url(../img/border-heading.jpg) top center / cover no-repeat;
+    background: url(../img/border-heading.jpg) top center / contain no-repeat;
     display: inline-block;
     padding: 26px 8px;
 }
